--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Work. Life. Balance.</title>
+    <title>Weekly business success podcast - Work. Life. Balance. with Michael Ray and Michael Panik</title>
     <link rel="stylesheet" href="https://use.typekit.net/ytq5xlh.css">
     <link rel="stylesheet" href="./styles/reset.css">
     <link rel="stylesheet" href="./styles/main.css">
+
+    <meta property="og:title" content="Weekly business success podcast - Work. Life. Balance. with Michael Ray and Michael Panik">
+    <meta property="og:site_name" content="Work. Life. Balance.">
+    <meta property="og:url" content="https://worklifebalanceshow.com">
+    <meta property="og:description" content="Work. Life. Balance. is a podcast on finding peace in an ever-connected world and avoiding workplace abuse. Each week we look at a different topic, the warning signs, and resolutions.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://worklifebalanceshow.com/assets/images/og_thumbnail.jpg">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145180339-1"></script>
