--- a/index.html
+++ b/index.html
@@ -35,24 +35,26 @@
         <main>
             <h2>Listen to us on:</h2>
             <div class="listen-links">
-                <a href="https://podcasts.apple.com/us/podcast/work-life-balance/id1467288888?uo=4" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Apple Podcasts">
+                <a href="https://podcasts.apple.com/us/podcast/work-life-balance/id1467288888?uo=4" data-action="apple" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Apple Podcasts">
                     <img src="./assets/images/apple.jpg" alt="Apple Podcasts logo">
                     Apple Podcasts
                 </a>
-                <a href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy9iZGZmZGU0L3BvZGNhc3QvcnNz" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Google Podcasts">
+                <a href="https://www.google.com/podcasts?feed=aHR0cHM6Ly9hbmNob3IuZm0vcy9iZGZmZGU0L3BvZGNhc3QvcnNz" data-action="google" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Google Podcasts">
                     <img src="./assets/images/google.jpg" alt="Google Podcasts logo">
                     Google Podcasts
                 </a>
-                <a href="https://open.spotify.com/show/2WKrVDMjAYEuv7I51guMOm" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Spotify">
+                <a href="https://open.spotify.com/show/2WKrVDMjAYEuv7I51guMOm" data-action="spotify" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Spotify">
                     <img src="./assets/images/spotify.jpg" alt="Spotify logo">
                     Spotify
                 </a>
-                <a href="https://anchor.fm/worklifebalance" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Anchor.fm">
+                <a href="https://anchor.fm/worklifebalance" data-action="anchor" class="listen-links__link" target="_blank" alt="Listen to Work Life Balance on Anchor.fm">
                     <img src="./assets/images/anchor.jpg" alt="Anchor.fm logo">
                     Anchor.fm
                 </a>
             </div>
         </main>
     </div>
+
+    <script src="./scripts/main.js"></script>
 </body>
 </html>
