Add email, improve fonts

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
 </head>
 <body>
     <div class="container">
-        <header>
+        <header class="text-center">
             <img src="./assets/images/album_art.jpg" alt="Work. Life. Balance. podcast album art" class="logo">
             <h1>Work. Life. Balance.</h1>
             <p class="lead">A podcast on struggling through workplace abuse by Michael Ray and Michael Panik.</p>
+            <p class="text-center"><strong>Questions or stories?</strong> We'll keep it as anonymous as you'd like. <a href="mailto:worklifebalanceshow@gmail.com">worklifebalanceshow@gmail.com</a></p>
         </header>
         <main>
             <h2>Listen to us on:</h2>
